<resources>
    <string name="app_name">Login</string>
    <string name="google_icon">google icon</string>
    <string name="sign_in_with_google">Masuk dengan Google</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="or">Atau</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="label_login">Login</string>
    <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="label_sign_up_now">Don\'t have an account yet?  <font color='#00AB6D'>Register Now</font></string>
</resources>